gen/TexExpParser.java
// Generated from /home/CS/users/abell/.linux/Documents/TexExp/TexExp.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TexExpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, OUT=34, ID=35, WS=36, BLOCKVAR=37, LETTER=38, DIGIT=39;
	public static final int
		RULE_prog = 0, RULE_declarations = 1, RULE_declaration = 2, RULE_inlineVar = 3, 
		RULE_inlineDec = 4, RULE_inlineBody = 5, RULE_arrayDec = 6, RULE_decEntList = 7, 
		RULE_decEntity = 8, RULE_entity = 9, RULE_blockVar = 10, RULE_decVarRef = 11, 
		RULE_varRef = 12, RULE_iterRef = 13, RULE_iterSymbol = 14, RULE_methodCall = 15, 
		RULE_argList = 16, RULE_template = 17, RULE_templateElement = 18, RULE_ref = 19, 
		RULE_subtemplate = 20, RULE_string = 21, RULE_legalSymbol = 22, RULE_wsOrEndl = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "declarations", "declaration", "inlineVar", "inlineDec", "inlineBody", 
			"arrayDec", "decEntList", "decEntity", "entity", "blockVar", "decVarRef", 
			"varRef", "iterRef", "iterSymbol", "methodCall", "argList", "template", 
			"templateElement", "ref", "subtemplate", "string", "legalSymbol", "wsOrEndl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\n'", "'='", "'{'", "'}'", "','", "'$'", "'@'", "'.'", "'('", 
			"')'", "'!'", "'#'", "'%'", "'^'", "'&'", "'*'", "'_'", "'+'", "'-'", 
			"'['", "']'", "'\\'", "'|'", "'''", "'\"'", "';'", "':'", "'<'", "'>'", 
			"'?'", "'/'", "'`'", "'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "OUT", "ID", 
			"WS", "BLOCKVAR", "LETTER", "DIGIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TexExp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TexExpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode OUT() { return getToken(TexExpParser.OUT, 0); }
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TexExpParser.EOF, 0); }
		public List<WsOrEndlContext> wsOrEndl() {
			return getRuleContexts(WsOrEndlContext.class);
		}
		public WsOrEndlContext wsOrEndl(int i) {
			return getRuleContext(WsOrEndlContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			declarations();
			setState(49);
			match(OUT);
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(50);
					wsOrEndl();
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(56);
			template();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==WS) {
				{
				{
				setState(57);
				wsOrEndl();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case ID:
			case BLOCKVAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(65);
					match(T__0);
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				declaration();
				setState(72);
				declarations();
				}
				break;
			case OUT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public InlineVarContext inlineVar() {
			return getRuleContext(InlineVarContext.class,0);
		}
		public BlockVarContext blockVar() {
			return getRuleContext(BlockVarContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				inlineVar();
				}
				break;
			case BLOCKVAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				blockVar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineVarContext extends ParserRuleContext {
		public InlineDecContext inlineDec() {
			return getRuleContext(InlineDecContext.class,0);
		}
		public InlineBodyContext inlineBody() {
			return getRuleContext(InlineBodyContext.class,0);
		}
		public InlineVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterInlineVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitInlineVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitInlineVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InlineVarContext inlineVar() throws RecognitionException {
		InlineVarContext _localctx = new InlineVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inlineVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			inlineDec();
			setState(82);
			inlineBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineDecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TexExpParser.ID, 0); }
		public List<TerminalNode> WS() { return getTokens(TexExpParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TexExpParser.WS, i);
		}
		public InlineDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterInlineDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitInlineDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitInlineDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InlineDecContext inlineDec() throws RecognitionException {
		InlineDecContext _localctx = new InlineDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inlineDec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(85);
				match(WS);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(T__1);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					match(WS);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineBodyContext extends ParserRuleContext {
		public ArrayDecContext arrayDec() {
			return getRuleContext(ArrayDecContext.class,0);
		}
		public DecEntityContext decEntity() {
			return getRuleContext(DecEntityContext.class,0);
		}
		public InlineBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterInlineBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitInlineBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitInlineBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InlineBodyContext inlineBody() throws RecognitionException {
		InlineBodyContext _localctx = new InlineBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_inlineBody);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				arrayDec();
				}
				break;
			case T__1:
			case T__3:
			case T__4:
			case T__5:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case ID:
			case WS:
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				decEntity();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDecContext extends ParserRuleContext {
		public DecEntListContext decEntList() {
			return getRuleContext(DecEntListContext.class,0);
		}
		public List<WsOrEndlContext> wsOrEndl() {
			return getRuleContexts(WsOrEndlContext.class);
		}
		public WsOrEndlContext wsOrEndl(int i) {
			return getRuleContext(WsOrEndlContext.class,i);
		}
		public ArrayDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterArrayDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitArrayDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitArrayDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayDecContext arrayDec() throws RecognitionException {
		ArrayDecContext _localctx = new ArrayDecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrayDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__2);
			setState(103);
			decEntList();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==WS) {
				{
				{
				setState(104);
				wsOrEndl();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecEntListContext extends ParserRuleContext {
		public DecEntityContext decEntity() {
			return getRuleContext(DecEntityContext.class,0);
		}
		public DecEntListContext decEntList() {
			return getRuleContext(DecEntListContext.class,0);
		}
		public List<WsOrEndlContext> wsOrEndl() {
			return getRuleContexts(WsOrEndlContext.class);
		}
		public WsOrEndlContext wsOrEndl(int i) {
			return getRuleContext(WsOrEndlContext.class,i);
		}
		public DecEntListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decEntList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterDecEntList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitDecEntList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitDecEntList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecEntListContext decEntList() throws RecognitionException {
		DecEntListContext _localctx = new DecEntListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_decEntList);
		try {
			int _alt;
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(112);
						wsOrEndl();
						}
						} 
					}
					setState(117);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(118);
				decEntity();
				setState(119);
				match(T__4);
				setState(120);
				decEntList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(122);
						wsOrEndl();
						}
						} 
					}
					setState(127);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				setState(128);
				decEntity();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecEntityContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public DecVarRefContext decVarRef() {
			return getRuleContext(DecVarRefContext.class,0);
		}
		public DecEntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decEntity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterDecEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitDecEntity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitDecEntity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecEntityContext decEntity() throws RecognitionException {
		DecEntityContext _localctx = new DecEntityContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_decEntity);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__3:
			case T__4:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case ID:
			case WS:
			case DIGIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				string();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				decVarRef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public RefContext ref() {
			return getRuleContext(RefContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitEntity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitEntity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_entity);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__3:
			case T__4:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case ID:
			case WS:
			case DIGIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				string();
				}
				break;
			case T__5:
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				ref();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockVarContext extends ParserRuleContext {
		public TerminalNode BLOCKVAR() { return getToken(TexExpParser.BLOCKVAR, 0); }
		public BlockVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterBlockVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitBlockVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitBlockVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockVarContext blockVar() throws RecognitionException {
		BlockVarContext _localctx = new BlockVarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_blockVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(BLOCKVAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecVarRefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TexExpParser.ID, 0); }
		public DecVarRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decVarRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterDecVarRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitDecVarRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitDecVarRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecVarRefContext decVarRef() throws RecognitionException {
		DecVarRefContext _localctx = new DecVarRefContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_decVarRef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__5);
			setState(142);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarRefContext extends ParserRuleContext {
		public DecVarRefContext decVarRef() {
			return getRuleContext(DecVarRefContext.class,0);
		}
		public MethodCallContext methodCall() {
			return getRuleContext(MethodCallContext.class,0);
		}
		public VarRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).enterVarRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TexExpListener ) ((TexExpListener)listener).exitVarRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TexExpVisitor ) return ((TexExpVisitor<? extends T>)visitor).visitVarRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarRefContext varRef() throws RecognitionException {
		VarRefContext _localctx = new VarRefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_varRef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			decVarRef();
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(145);
				methodCall();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
